Prevents horizontal scrollbar from appearing in Terminal

--- a/src/app/apps/Terminal/Terminal.module.scss
+++ b/src/app/apps/Terminal/Terminal.module.scss
@@ -18,6 +18,7 @@
   right: 0;
   bottom: 0;
   left: 0;
+  overflow-x: hidden;
   overflow-y: auto;
 }
 
